Fix stories dashboard block on ios

--- a/src/app/components/list-preview-stories/list-preview-stories.component.scss
+++ b/src/app/components/list-preview-stories/list-preview-stories.component.scss
@@ -5,10 +5,12 @@
   flex: 1 1 24%;
   .preview-story {
     width: 50px;
-    //height: 70px;
+    height: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+		align-items: center;
+		margin-right: 10px;
     &:not(:first-child) {
       margin-left: 10px;
     }
